[gd_scene load_steps=9 format=2]

[ext_resource path="res://characters/players/Player_JustJump_Movement.tscn" type="PackedScene" id=1]
[ext_resource path="res://SpawnPath.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://ScreenBorder.tscn" type="PackedScene" id=4]
[ext_resource path="res://backgrounds/BackgroundWoods.tscn" type="PackedScene" id=5]
[ext_resource path="res://EnemyTimer.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Main_JustJump.gd" type="Script" id=7]
[ext_resource path="res://MobDestructionBorder.tscn" type="PackedScene" id=8]

[node name="JumpMovement" type="Node2D"]
script = ExtResource( 7 )

[node name="SpawnPath" parent="." instance=ExtResource( 2 )]
position = Vector2( -300, 0 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 5 )]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 960, 847.265 )

[node name="EnemyTimer" parent="." instance=ExtResource( 6 )]

[node name="ScreenBorder" parent="." instance=ExtResource( 4 )]

[node name="MobDestructionBorder" parent="." instance=ExtResource( 8 )]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
